--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Website</title>
         <link rel="stylesheet" href="estilo.css">
-        <title>aula 3103</title>
     </head>
     <body>
         <div class="wrapper">
 
             <header>
-                <div>
-                    <img src="img/logo-auebas.png" class="resp">
+                <div class="logo">
+                    <img src="img/logo-auebas.png" class="resp" />
                 </div>
                 <div class="menu-apoio">
-                    <div>Menu-01</div>
-                    <div>Menu-02</div>
-                    <div>Menu-03</div>  
+                    <div class="item-menu-apoio">Menu-01</div>
+                    <div class="item-menu-apoio">Menu-02</div>
+                    <div class="item-menu-apoio">Menu-03</div>
+                </div>
             </header>
 
             <div class="conteudo">
@@ -30,16 +31,12 @@
                     <div>Menu-09</div>
                     <div>Menu-10</div>
                 </nav>
-
                 <main>
                     Conteúdo Principal
                 </main>
-
             </div>
 
-            <footer>
-                Rodapé
-            </footer>
+            <footer>Rodapé</footer>
 
         </div>
     </body>
