--- a/index.html
+++ b/index.html
@@ -12,27 +12,44 @@
 
             <header>
                 <div class="logo">
-                    <img src="img/logo-auebas.png" class="resp" />
+                    <img src="img/logo-auebas.png" class="resp"/>
                 </div>
                 <div class="menu-apoio">
-                    <div class="item-menu-apoio">Menu-01</div>
-                    <div class="item-menu-apoio">Menu-02</div>
-                    <div class="item-menu-apoio">Menu-03</div>
+                    <div class="item-menu-apoio">Sobre</div>
+                    <div class="item-menu-apoio">Franquias</div>
+                    <div class="item-menu-apoio">Cardapio</div>
                 </div>
             </header>
 
             <div class="conteudo">
                 <nav>
-                    <div>Menu-04</div>
-                    <div>Menu-05</div>
-                    <div>Menu-06</div>
-                    <div>Menu-07</div>
-                    <div>Menu-08</div>
-                    <div>Menu-09</div>
-                    <div>Menu-10</div>
+                    <div class="menu">Combos</div>
+                    <div class="menu">Favoritos</div>
+                    <div class="menu">Especiais</div>
+                    <div class="menu">Sobremesas</div>
+                    <div class="menu">Bebidas</div>
+                    <div class="menu">Porções</div>
+                    <div class="menu">Promoções</div>
                 </nav>
                 <main>
-                    Conteúdo Principal
+                    <div>
+                        <img src="img/lanches/01.png" class="resp">
+                    </div>
+                    <div>
+                        <img src="img/lanches/02.png" class="resp">
+                    </div>
+                    <div>
+                        <img src="img/lanches/03.png" class="resp">
+                    </div>
+                    <div>
+                        <img src="img/lanches/04.png" class="resp">
+                    </div>
+                    <div>
+                        <img src="img/lanches/05.png" class="resp">
+                    </div>
+                    <div>
+                        <img src="img/lanches/06.png" class="resp">
+                    </div>
                 </main>
             </div>
 
